# asana-ai

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  config.example.yaml  pyproject.toml  requirements.txt
examples/: advanced.py  basic.py
src/: __main__.py  core.py  health.py  utils.py
src/asana/: __init__.py  cli.py  models.py  report.py  simulator.py
src/asana/pose/: __init__.py  analyzer.py  corrector.py  detector.py
tests/: test_analyzer.py  test_benchmark.py  test_core.py  test_corrector.py  test_integration.py  test_library.py  test_models.py  test_simulator.py
